manifest/objects/DMMAX__StatusChatter__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__LastChatted__c</fullName>
        <label>LastChatted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__Status__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Status</label>
        <referenceTo>DMMAX__Status__c</referenceTo>
        <relationshipLabel>Max Status Chatters</relationshipLabel>
        <relationshipName>StatusChatters</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Uniqueness</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Max Status Chatter</label>
    <nameField>
        <label>StatusChatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Status Chatters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>